<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="441dp">

        <EditText
            android:id="@+id/titreScenarioButton"
            android:layout_width="470dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="106dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/entrerTitre" />

        <Button
            android:id="@+id/ajoutVideoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titreScenarioButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:text="@string/titre_ajouter_video" />

        <Button
            android:id="@+id/termineButton"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="19dp"
            android:text="@string/terminer" />

    </RelativeLayout>

</LinearLayout>